// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectDebugFiles renders 1`] = `
<ProjectDebugSymbols
  params={
    Object {
      "orgId": "org",
      "projectId": "project",
    }
  }
>
  <SettingsPageHeading
    title="Debug Information Files"
  >
    <Wrapper>
      <div
        className="css-1pnrn3o-Wrapper e1kblvez1"
      >
        <Flex
          align="center"
        >
          <Base
            align="center"
            className="css-5ipae5"
          >
            <div
              className="css-5ipae5"
              is={null}
            >
              <Title>
                <Base
                  className="css-1mqcea-Title e1kblvez0"
                >
                  <div
                    className="css-1mqcea-Title e1kblvez0"
                    is={null}
                  >
                    Debug Information Files
                  </div>
                </Base>
              </Title>
            </div>
          </Base>
        </Flex>
      </div>
    </Wrapper>
  </SettingsPageHeading>
  <TextBlock>
    <Component
      className="css-1geyb25-TextBlock ec8ep340"
    >
      <div
        className="css-1geyb25-TextBlock ec8ep340"
      >
        
          Here you can find all your uploaded debug information files (dSYMs, ProGuard, Breakpad ...).
          This is used to convert addresses and minified function names from crash dumps
          into function names and locations.
        
      </div>
    </Component>
  </TextBlock>
  <div
    className="row m-b-1"
  >
    <div
      className="col-sm-7"
    />
    <div
      className="col-sm-5"
    >
      <SearchBar
        defaultQuery=""
        onSearch={[Function]}
        placeholder="Search for a DIF"
        query=""
      >
        <div
          className="search"
        >
          <form
            className="form-horizontal"
            onSubmit={[Function]}
          >
            <div>
              <input
                autoComplete="off"
                className="search-input form-control"
                name="query"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="Search for a DIF"
                type="text"
                value=""
              />
              <span
                className="icon-search"
              />
            </div>
          </form>
        </div>
      </SearchBar>
    </div>
  </div>
  <Panel>
    <Component
      className="css-yahxlu-Panel e1laxa7d0"
    >
      <div
        className="css-yahxlu-Panel e1laxa7d0"
      >
        <PanelHeader>
          <Component
            className="css-gxu3mm-PanelHeader-getPadding e1p8v8nv0"
          >
            <Flex
              align="center"
              className="css-gxu3mm-PanelHeader-getPadding e1p8v8nv0"
              justify="space-between"
            >
              <Base
                align="center"
                className="e1p8v8nv0 css-18dn1ya-PanelHeader-getPadding"
                justify="space-between"
              >
                <div
                  className="e1p8v8nv0 css-18dn1ya-PanelHeader-getPadding"
                  is={null}
                >
                  <Box
                    w={0.375}
                  >
                    <Base
                      className="css-cxbzjr"
                      w={0.375}
                    >
                      <div
                        className="css-cxbzjr"
                        is={null}
                      >
                        Debug ID
                      </div>
                    </Base>
                  </Box>
                  <Box
                    flex="1"
                  >
                    <Base
                      className="css-vti0ei"
                      flex="1"
                    >
                      <div
                        className="css-vti0ei"
                        is={null}
                      >
                        Name
                      </div>
                    </Base>
                  </Box>
                  <Box
                    flex="1"
                  >
                    <Base
                      className="css-vti0ei"
                      flex="1"
                    >
                      <div
                        className="css-vti0ei"
                        is={null}
                      />
                    </Base>
                  </Box>
                </div>
              </Base>
            </Flex>
          </Component>
        </PanelHeader>
        <PanelBody
          direction="column"
          disablePadding={true}
          flex={false}
        >
          <div
            className="css-9vq8an-textStyles"
          >
            <EmptyStateWarning>
              <EmptyStreamWrapper
                className="ref-empty-state"
              >
                <div
                  className="ref-empty-state css-n38n5f-EmptyStreamWrapper ernlsnc0"
                >
                  <Icon
                    className="icon icon-exclamation"
                  >
                    <div
                      className="icon icon-exclamation css-tjp7mx-Icon ernlsnc1"
                    />
                  </Icon>
                  <p>
                    There are no debug symbols for this project.
                  </p>
                </div>
              </EmptyStreamWrapper>
            </EmptyStateWarning>
          </div>
        </PanelBody>
      </div>
    </Component>
  </Panel>
  <Pagination
    onCursor={[Function]}
  />
</ProjectDebugSymbols>
`;

exports[`ProjectDebugFiles renders empty 1`] = `
<Fragment>
  <SettingsPageHeading
    title="Debug Information Files"
  />
  <TextBlock>
    
          Here you can find all your uploaded debug information files (dSYMs, ProGuard, Breakpad ...).
          This is used to convert addresses and minified function names from crash dumps
          into function names and locations.
        
  </TextBlock>
  <div
    className="row m-b-1"
  >
    <div
      className="col-sm-7"
    />
    <div
      className="col-sm-5"
    >
      <SearchBar
        defaultQuery=""
        onSearch={[Function]}
        placeholder="Search for a DIF"
        query=""
      />
    </div>
  </div>
  <Panel>
    <PanelHeader>
      <Box
        w={0.375}
      >
        Debug ID
      </Box>
      <Box
        flex="1"
      >
        Name
      </Box>
      <Box
        flex="1"
      />
    </PanelHeader>
    <PanelBody
      direction="column"
      disablePadding={true}
      flex={false}
    >
      <LoadingIndicator />
    </PanelBody>
  </Panel>
  <Pagination
    onCursor={[Function]}
    pageLinks=""
  />
</Fragment>
`;
